--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,100 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Documentation Home"
+description: "Guides, resources, and references for building with Asymptote"
 ---
 
-## Setting up
-
-Get your documentation site up and running in minutes.
-
 <Card
-  title="Start here"
+  title="Quickstart"
   icon="rocket"
   href="/quickstart"
   horizontal
 >
-  Follow our three step quickstart guide.
+  Get up and running with Asymptote in minutes.
 </Card>
 
-## Make it yours
+## Core Concepts
 
-Design a docs site that looks great and empowers your users.
+<CardGroup cols={2}>
+  <Card
+    title="What is Asymptote?"
+    icon="shield-check"
+    href="/introduction/what-is-asymptote"
+  >
+    See an overview of Asymptote's security platform for AI coding.
+  </Card>
+  <Card
+    title="Platform Architecture"
+    icon="sitemap"
+    href="/introduction/architecture"
+  >
+    Understand how Asymptote works under the hood.
+  </Card>
+  <Card
+    title="Security"
+    icon="lock"
+    href="/security/overview"
+  >
+    Learn about our security practices and features.
+  </Card>
+  <Card
+    title="Deployment"
+    icon="rocket"
+    href="/deployment/feature-development-lifecycle"
+  >
+    Deploy and manage your security configurations.
+  </Card>
+</CardGroup>
 
-<Columns cols={2}>
+## Guides
+
+<CardGroup cols={2}>
   <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
+    title="Working with Branches"
+    icon="code-branch"
+    href="/deployment/branches"
   >
-    Edit your docs locally and preview them in real time.
+    Make rapid changes and explore features with branches.
   </Card>
   <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
+    title="GitHub Actions"
+    icon="github"
+    href="/deployment/github-actions"
   >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
+    Integrate Asymptote with GitHub Actions for automated scanning.
   </Card>
   <Card
-    title="API documentation"
+    title="GitLab CI/CD"
+    icon="gitlab"
+    href="/deployment/gitlab-cicd"
+  >
+    Set up security scanning in your GitLab pipelines.
+  </Card>
+  <Card
+    title="Scan Acceleration"
+    icon="bolt"
+    href="/deployment/acceleration"
+  >
+    Optimize scan performance for large codebases.
+  </Card>
+</CardGroup>
+
+## Developer Tools
+
+Use Asymptote in your preferred environment.
+
+<CardGroup cols={2}>
+  <Card
+    title="CLI"
     icon="terminal"
+    href="/cli/index"
+  >
+    Scan and monitor from the command line.
+  </Card>
+  <Card
+    title="API Reference"
+    icon="code"
     href="/api-reference/introduction"
   >
-    Auto-generate API documentation from OpenAPI specifications.
+    Integrate Asymptote via REST API.
   </Card>
-</Columns>
-
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
-
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
+</CardGroup>
