--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -15,13 +15,13 @@ Before installing Asymptote, you must have:
 
 Visit [Asymptote](https://asymptotelabs.ai/login) to create a new account. You can sign up with Google or GitHub, or use your email address and set a password.
 
-Your account gives you access to the Asymptote dashboard, where you can:
-- Configure custom security policies
-- See vulnerabilities we've detected (and the ones we've already remediated)
-- Track security and remediation metrics over time
+Your account includes access to the Asymptote dashboard, where you can:
+
+- **Define and manage security policies** that match your team's standards
+- **Review detected vulnerabilities**, including what was fixed automatically and what still needs action
+- **Track product security and remediation trends** over time with clear metrics and reporting
 
 ### Step 2: Connect Your GitHub Account
-
 <Steps>
   <Step title="Sign into GitHub">
     <img src="/public/asymptote_github_connection.png" alt="Asymptote GitHub Connection" style={{ maxWidth: '400px' }} />
@@ -45,11 +45,15 @@ Your account gives you access to the Asymptote dashboard, where you can:
   </Step>
 </Steps>
 
-### Step 3: Create an Asymptote Secret key
+### Step 3: Create a new Secret Key
 
-In the Asymptote Dashboard, navigate to the API Keys tab. Create a new secret key, apply the relevant scopes, and set a desired expiration (optional).
+Navigate to the **API Keys** tab in the Asymptote Dashboard.
 
 <img src="/public/secret_key_tab.png" alt="Asymptote Secret Key Tab" style={{ maxWidth: '700px' }} />
+
+Create a new secret key, apply the relevant scopes, and set a desired expiration (optional).
+
+<img src="/public/secret_key_configuration.png" alt="Asymptote Secret Key Configuration" style={{ maxWidth: '400px', display: 'block', margin: '0 auto' }} />
 
 ### Step 4: Go live
 
@@ -58,30 +62,7 @@ In the Asymptote Dashboard, navigate to the API Keys tab. Create a new secret ke
   2. Your docs will update and be live in moments!
 </Accordion>
 
-## Next steps
+<Info icon="circle-question" title="Need Help?">
+  Need assistance getting set up? Our team can help with configuration and onboarding. Contact [support@asymptotelabs.ai](mailto:support@asymptotelabs.ai).
+</Info>
 
-Now that you have your docs running, explore these key features:
-
-<CardGroup cols={2}>
-
-<Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-  Learn MDX syntax and start writing your documentation.
-</Card>
-
-<Card title="Customize style" icon="palette" href="/essentials/settings">
-  Make your docs match your brand perfectly.
-</Card>
-
-<Card title="Add code examples" icon="square-code" href="/essentials/code">
-  Include syntax-highlighted code blocks.
-</Card>
-
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
-</Card>
-
-</CardGroup>
-
-<Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
-</Note>
