--- a/introduction/what-is-asymptote.mdx
+++ b/introduction/what-is-asymptote.mdx
@@ -15,11 +15,7 @@ Asymptote eliminates the core security and governance gaps that appear when code
 
 - **Securing AI coding agents against AI-enabled attacks:** Protections for new failure modes unique to agents where prompts, tool calls, or external content can steer agents into unsafe behavior (for example, data exfiltration, malicious code changes, unauthorized actions, or policy bypass).
 
-- **Policy-driven access control for tools and environments:** Least-privilege permissions and scoped credentials for repos, CI, cloud, and databases, limiting blast radius when something goes wrong.
-
-- **Safe execution and high-risk action gating:** Sandboxing and approval gates for sensitive operations (running scripts, touching prod, modifying auth, changing dependencies, releasing).
-
-- **Auditability and provenance across the entire agent workflow:** Traceable logs and attribution for what changed, why, and how, supporting incident response and compliance.
+- **Policy-driven enforcement of security standards and compliance:** A single place to define and manage security policies in natural language, then automatically enforce them across the entire developer and agent workflow, including repos, CI/CD, cloud, and data environments.
 
 ## Key capabilities
 
