--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -55,12 +55,9 @@ Create a new secret key, apply the relevant scopes, and set a desired expiration
 
 <img src="/public/secret_key_configuration.png" alt="Asymptote Secret Key Configuration" style={{ maxWidth: '400px', display: 'block', margin: '0 auto' }} />
 
-### Step 4: Go live
+### Step 4: Connect Asymptote MCP to Coding Tools
 
-<Accordion icon="rocket" title="Publish your docs">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments!
-</Accordion>
+Follow the [setup instructions](https://docs.asymptotelabs.ai/ai-tools/mcp-server#mcp-client-integrations) specific to your AI coding tool of choice.
 
 <Info icon="circle-question" title="Need Help?">
   Need assistance getting set up? Our team can help with configuration and onboarding. Contact [support@asymptotelabs.ai](mailto:support@asymptotelabs.ai).
