--- a/ai-tools/mcp-server.mdx
+++ b/ai-tools/mcp-server.mdx
@@ -21,6 +21,16 @@ Asymptote's MCP Server sits between your AI coding agent and your engineering sy
 
 ### Cursor
 
+**One-click install:**
+
+<div style={{ display: 'flex', justifyContent: 'center', margin: '16px 0' }}>
+  <a href="cursor://anysphere.cursor-deeplink/mcp/install?name=asymptote-security-mcp&config=eyJjb21tYW5kIjoibnB4IiwiYXJncyI6WyIteSIsIkBhc3ltcHRvdGUtbGFicy9hc3ltcHRvdGUtc2VjdXJpdHktbWNwIl0sImVudiI6eyJBU1lNUFRPVEVfQVBJX0tFWSI6InlvdXItYXBpLWtleS1oZXJlIn19" style={{ textDecoration: 'none', border: 'none' }}>
+    <img src="https://cursor.com/deeplink/mcp-install-dark.png" alt="Add Asymptote Security MCP to Cursor" style={{ height: '40px', display: 'block' }} noZoom />
+  </a>
+</div>
+
+**Manually install:**
+
 <Steps>
   <Step title="Open Cursor Settings">
     Open the command palette (<kbd>cmd</kbd> + <kbd>shift</kbd> + <kbd>p</kbd> on macOS or <kbd>ctrl</kbd> + <kbd>shift</kbd> + <kbd>p</kbd> on Windows) and choose **Cursor Settings**.
